<!--
  ~ Copyright © 2017 Dmitry Markin
  ~
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at http://mozilla.org/MPL/2.0/.
  -->

<resources>
    <string name="app_name">Current Weather</string>

    <string name="pref_location_title">Location</string>
    <string name="pref_location_default">London, GB</string>

    <string name="pref_units_title">Units</string>
    <string-array name="pref_units_names">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="pref_units_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <string name="pref_units_default">metric</string>

    <string name="pref_interval_title">Update interval</string>
    <string-array name="pref_interval_names">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <!-- Other intervals (2,3,4 hours) won't work on API < 19 -->
        <item>Never</item>
    </string-array>
    <string-array name="pref_interval_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>0</item>
    </string-array>
    <string name="pref_interval_default">30</string>

    <string name="pref_show_locked_title">Show when locked</string>
    <string name="pref_show_locked_summary">Show weather notification when screen is locked</string>

    <string name="pref_show_unlocked_title">Show when unlocked</string>
    <string name="pref_show_unlocked_summary">Show weather notification when screen is unlocked</string>

    <string name="pref_credits_title">Legal info</string>

    <!-- For android >= 4.2 and < 5.0
    <string name="pref_show_lockscreen_title">Show on lock-screen</string>
    <string name="pref_show_lockscreen_summary">Show lock-screen widget</string> -->

    <string name="unknown_error">Unknown error.</string>
    <string name="no_connection_error">No network connection.</string>
    <string name="network_error">No connection to the internet.</string>
    <string name="timeout_error">Network connection timed out.</string>
    <string name="server_error">Server is down.</string>
    <string name="parsing_error">Server response parsing error.</string>
    <string name="update_now_hint">Tap to update now.</string>

    <string name="updating_weather_toast">Updating weather...</string>
    <string name="legal_activity_title">Legal information</string>

    <string name="credits_html">
        <![CDATA[<html>
        <body>
        <p>Weather data are provided by <a href="https://openweathermap.org/">OpenWeatherMap.</a></p>
        <p>The app icon is based on the original design by
        <a href="https://www.flaticon.com/authors/those-icons">Those&nbsp;Icons</a> from
        <a href="https://www.flaticon.com/">Flaticon.</a></p>
        <p>This app is available under the terms of <a href="https://www.mozilla.org/en-US/MPL/2.0/">
        Mozilla Public License v.&nbsp;2.0</a>. The source code can be found in the project\'s
        <a href="https://github.com/dmitry-markin/current_weather">GitHub repository.</a></p>
        </body>
        </html>]]>
    </string>
</resources>
